--- a/gif-os-app/src/Components/GifsResults/GifResults.css
+++ b/gif-os-app/src/Components/GifsResults/GifResults.css
@@ -6,7 +6,7 @@
     height: auto;
     grid-template-columns: repeat(4, 1fr);
     row-gap: 2rem;
-    padding: 3rem 3rem;
+    padding: 2rem 2rem;
     transition: background-color 0.6s;
 }
  .gifResult-text-result{
